syntax = "proto3";
package mall.protobuf.order;

import "google/protobuf/any.proto";
import "google/type/datetime.proto";
import "mall/protobuf/order/types.proto";
import "mall/protobuf/product/types.proto";
import "mall/protobuf/express/types.proto";

option java_package = "com.yuanmai.protobuf.mall.order";
option java_multiple_files = true;
option go_package = "github.com/buzzxu/yuanmai-mall-protobuf-go;order";

message OrderDelivery {
    int64 id = 1;
    string parentOrderNumber = 2;
    string orderNumber = 3;
    string express = 4;
    string expressCode = 5;
    string expressNo = 6;
    string content = 7;
    mall.protobuf.express.ExpressState state = 8;
    mall.protobuf.express.TracesInfo traces = 9;
    repeated int64 itemIds = 10;
    repeated OrderItemMini items = 11;
}

message OrderItemMini {
    int64 id =1;
    string productName = 2;
    int32 number = 3;
    int64 amount = 4;
    string image =5;
    mall.protobuf.product.Units unit = 6;
    repeated mall.protobuf.order.ItemSpec specs = 7;
}