syntax = "proto3";
package yuanmai.mall.protobuf;

import "google/protobuf/any.proto";
import "google/type/datetime.proto";

option java_package = "com.yuanmai.mall.protobuf";
option java_multiple_files = true;
option go_package = "github.com/buzzxu/yuanmai-mall-protobuf-go";

//商品
message Goods{
    int64 id = 1;
    optional int64 version = 2;
    string name =3;
    int64 productId = 4;
    //商品SKU码
    string sku = 5;
    //商品条形码
    optional string barcode = 6;
    //商品型号
    optional string marque = 7;
    string image = 8;
    // 销售价 单位：分
    int32 price = 9;
    // 市场价 单位：分
    int32 priceMarket = 10;
    // 会员价 单位：分
    int32 priceMember =11;
    // 成本价格 单位：分
    int32 priceCost =12;
    // 销量
    int32 sales = 13;
    // 总交易额 单位：分
    int32 totalTradeAmount = 14;
    // 销售库存
    int32 stock = 15;
    // 物理库存
    int32 stockPhysical =16;
    // 冻结库存
    int32 stockFreeze =17;
    // 预警库存
    int32 stockWarning =18;
    // 商品重量，默认为kg
    optional float weight = 19;
    // 体积(立方)
    optional float volume = 20;
    // 规格组合
    repeated SpecType specs =21;
    // 规格路径
    repeated string symbolPath = 22;
    // 是否启用
    bool enable =23;
}

message Spec{
    int64 id = 1;
    optional int32 categoryId =2;
    optional int64 productId = 3;
    optional InputType type = 4;
    bool input = 5;
    string name = 6;
    string code = 7;
    int32 sorted = 8;
    repeated SpecVal vals = 9;
}
// 规格值
message SpecVal{
    int64 id = 1;
    int64 productId = 2;
    int64 specId = 3;
    string spec = 4;
    string value = 5;
    optional string symbol = 6;
    optional string type = 7;
    optional string icon = 8;
}

enum InputType{
    //忽略
    INPUT_TYPE_NONE = 0;
    //单选
    RADIO = 1;
    //多选
    CHECKBOX =2;
}

//规格类型
enum SpecType{
    //    单规格
    GENERAL = 0;
    //    多规格
    MULTIPLE = 1;
}
